clang/test/BSC/Negative/Ownership/Owned/owned_init/owned_init.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

void test1() {
    int owned a = 10;           //legal
    int owned a1 = 10.0f;       //expected-error {{incompatible owned types, cannot cast 'float' to 'owned int'}}
    int owned c = 10 + 20;      //expected-error {{incompatible owned types, cannot cast 'int' to 'owned int'}}
    int owned b = (int owned)10;    //legal

    int d = 10;
    int owned e = d;    //expected-error {{incompatible owned types, cannot cast 'int' to 'owned int'}}
    int owned f = (int owned)d; //legal

    float owned f1 = 1.0f;
    char owned c1 = 'c';
}

typedef struct A {
    int num;
}SA;

typedef struct B {
    owned int num;
}SB;

void test2() {
    struct A owned a1 = {.num = 10};
    SA owned a2 = {.num = 20};

    struct B owned b1 = {.num = 10};
    SB owned b2 = {.num = 20};
}

void test3() {
    int a = 10;
    int* owned b = &a;  //expected-error {{incompatible owned types, cannot cast 'int *' to 'int *owned'}}
}